src/test/deca/context/invalid/custom/object/same_name_method_field.deca
class Vehicle {
    protected int wheels;

    void Vehicle(int wheels) {
        this.wheels = wheels;
    }

    void setWheels(int newWheels) {
        this.wheels = newWheels;
    }

    int getWheels() {
        return this.wheels;
    }

    Vehicle returnObject() {
        return this;
    }
}

class Car extends Vehicle {
    protected int maxSpeed;
    float height;

    void Car(int maxSpeed, float height) {
        this.maxSpeed = maxSpeed;
        this.height = height;
    }

    void setMaxSpeed(int newSpeed) {
        maxSpeed = newSpeed;
    }

    int getMaxSpeed() {
        return maxSpeed;
    }

    float calculateFuel() {
        return (maxSpeed * height) / 10;
    }

    float distanceMax() {
        return this.calculateFuel() * height;
    }

    int getWheels() {
        return this.wheels;
    }

    Car returnObject() {
        return this;
    }

    void height() {
        print(this.height);
    }
}
